--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,15 +16,34 @@ spring:
   security:
     oauth2:
       client:
-         registration:
-           google:
-             url: https://accounts.google.com/o/oauth2/v2/auth
-             client-id: 439336342405-nre340oeebn9anekepg90l8e0h393b0a.apps.googleusercontent.com
-             client-secret: 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
-             callback:
-               url: http://localhost:8080/auth/google/callback
-             token:
-               url: https://oauth2.googleapis.com/token
+        registration:
+          google:
+            client-id: 439336342405-nre340oeebn9anekepg90l8e0h393b0a.apps.googleusercontent.com
+            client-secret: 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
+            redirect-uri: http://localhost:8080/auth/google/callback
+            authorization-grant-type: authorization_code
+
+          naver:
+            client-id: TNuMq_gYy_tgObjW7Y4X
+            client-secret: 12QarSugJm
+            redirect-uri: http://localhost:8080/auth/naver/callback
+            #{baseUrl}/{action}/oauth2/code/{registrationId}
+            scope: name,email
+            client-name: Naver
+            authorization-grant-type: authorization_code
+
+        provider:
+          google:
+            authorization-uri: http://localhost:8080/auth/naver
+            token-uri: https://oauth2.googleapis.com/token
+
+          naver:
+            authorization-uri: https://nid.naver.com/oauth2.0/authorize
+            token-uri: https://nid.naver.com/oauth2.0/token
+            user-info-uri: https://openapi.naver.com/v1/nid/me
+            # 기준이 되는 user_name 의 이름을 네이버에서는 response로 지정해야한다. (네이버 회원 조회시 반환되는 JSON 형태 떄문이다)
+            user-name-attribute: response
+
 
 logging:
   level:
