--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -19,22 +19,24 @@ spring:
         registration:
           google:
             client-id: 439336342405-nre340oeebn9anekepg90l8e0h393b0a.apps.googleusercontent.com
-            client-secret: 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
+            client-secret: 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http://localhost:8080/auth/naver
             redirect-uri: http://localhost:8080/auth/google/callback
             authorization-grant-type: authorization_code
 
           naver:
-            client-id: TNuMq_gYy_tgObjW7Y4X
-            client-secret: 12QarSugJm
-            redirect-uri: http://localhost:8080/auth/naver/callback
-            #{baseUrl}/{action}/oauth2/code/{registrationId}
-            scope: name,email
+            client-id: oeiI6UyzGUxfwwnLq7_l
+            client-secret: 5TbvXBxXhu
+            #yaml 에서는 / (슬러시)를 그대로 쓰면 파싱 에러가 난다. 따옴표나 작은 따옴표로 감싸주어야함
+            redirect-uri: '{baseUrl}/{action}/oauth2/code/{registrationId}'
+                # = http://localhost:8080/login/oauth2/code/naver
+            scope: name,email,mobile
             client-name: Naver
             authorization-grant-type: authorization_code
 
+
         provider:
           google:
-            authorization-uri: http://localhost:8080/auth/naver
+            authorization-uri: http://localhost:8080/auth/google
             token-uri: https://oauth2.googleapis.com/token
 
           naver:
@@ -42,7 +44,7 @@ spring:
             token-uri: https://nid.naver.com/oauth2.0/token
             user-info-uri: https://openapi.naver.com/v1/nid/me
             # 기준이 되는 user_name 의 이름을 네이버에서는 response로 지정해야한다. (네이버 회원 조회시 반환되는 JSON 형태 떄문이다)
-            user-name-attribute: response
+            user_name_attribute: response
 
 
 logging:
