--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -18,20 +18,21 @@ spring:
       client:
         registration:
           google:
-            client-id: 439336342405-kjsaaodjc5coet1chmjg3fmq948vg7mi.apps.googleusercontent.com
-            client-secret: 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
+            client-id: 439336342405-012u04drpj6taht6aelfb446pvos08n9.apps.googleusercontent.com
+            client-secret: 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
             redirect-uri: http://localhost:8080/auth/google/callback
-            authorization-grant-type: code
+            authorization-grant-type: authorization_code
 
           naver:
             client-id: oeiI6UyzGUxfwwnLq7_l
-            client-secret: GZpMu07z7f
+            client-secret: U3L0jDVVHf
             #yaml 에서는 / (슬러시)를 그대로 쓰면 파싱 에러가 난다. 따옴표나 작은 따옴표로 감싸주어야함
-            redirect-uri: '{baseUrl}/{action}/oauth2/code/{registrationId}'
-            # = http://localhost:8080/login/oauth2/code/naver
-            scope: name,email,mobile
+            redirect-uri: http://localhost:8080/login/oauth2/code/naver
+            # '{baseUrl}/{action}/oauth2/code/{registrationId}' 말고 링크로 넣었더니 오류 해결
+            scope: name,email
             client-name: Naver
             authorization-grant-type: authorization_code
+
 
 
         provider:
@@ -44,7 +45,7 @@ spring:
             token-uri: https://nid.naver.com/oauth2.0/token
             user-info-uri: https://openapi.naver.com/v1/nid/me
             # 기준이 되는 user_name 의 이름을 네이버에서는 response로 지정해야한다. (네이버 회원 조회시 반환되는 JSON 형태 떄문이다)
-            user_name_attribute: response
+            user-name-attribute: response
 
 
 logging:
